<resources>


    <string name="app_name" translatable="false">panthiya</string>
    <string name="report" translatable="false">Report</string>
    <string name="addmarks" translatable="false">Add Marks</string>
    <string name="panthikamare" translatable="false">Panthi Kamare</string>
    <string name="it19956268" translatable="false">IT19956268</string>
    <string name="maduka" translatable="false">Maduka</string>
    <string name="mad" translatable="false">MAD</string>
    <string name="menuicon" translatable="false">Menu Icon</string>
    <string name="arrowback" translatable="false">Arrowback</string>
    <string name="marksicon" translatable="false">Marksicon</string>
    <string name="dotmenu" translatable="false">Dotmenu</string>


    <!-- activity. table -->


    <string name="assignmentno">Assignment NO</string>
    <string name="studentid">Student Id</string>
    <string name="firstname">First Name</string>
    <string name="firstnameinput">First Name</string>
    <string name="IT19956268" />
    <string name="studentidinput">IT19956268</string>
    <string name="asignmentnumber">B0123</string>
    <string name="firstnameiinput">Maduka</string>
    <string name="lastname">Last Name</string>
    <string name="lastnameinput">Senavirathna</string>
    <string name="marks">Marks</string>
    <string name="marksinput">78</string>
    <string name="comment">Comment</string>
    <string name="commentinput">good</string>
    <string name="savebtn">Save</string>


    <!-- edit -->

    <string name="editassignmentno">Asignment NO</string>
    <string name="editasignmentinput">B123</string>
    <string name="editcommentinput">less marks</string>
    <string name="editstudentid">Student ID</string>
    <string name="editisudentidinput">IT17568597</string>
    <string name="editfirstname">First Name</string>
    <string name="editfirstnameinput">Geeth</string>
    <string name="editlastname">Last Name</string>
    <string name="editlastnameinput">Adasooriya</string>
    <string name="editmarks">Marks</string>
    <string name="editmarksinput">40</string>
    <string name="editcomment">Comment</string>
    <string name="updatebtn">Update</string>
    <string name="editstudentidinput">IT17526985</string>


    <!-- tables -->

    <string name="tableassignmentno">Assignment NO....</string>
    <string name="tablego">GO!</string>
    <string name="tableno">NO</string>
    <string name="tablesubject">Subject</string>
    <string name="tablesid">SID</string>
    <string name="tablemarks">Marks</string>
    <string name="row1col1">01</string>
    <string name="row1col2">MAD</string>
    <string name="row1col3">SID001</string>
    <string name="row01col04">95</string>
    <string name="row2col1">02</string>
    <string name="row2col2">MAD</string>
    <string name="row2col3">SID002</string>
    <string name="row2col4">90</string>
    <string name="row3col1">03</string>
    <string name="row4col1">04</string>
    <string name="row5col1">05</string>
    <string name="row6col1">06</string>
    <string name="row7col1">07</string>
    <string name="row3col2">MAD</string>
    <string name="row4col2">MAD</string>
    <string name="row5col2">MAD</string>
    <string name="row6col2">MAD</string>
    <string name="row7col2">MAD</string>
    <string name="row3col3">SID003</string>
    <string name="roe4col3">SID004</string>
    <string name="row5col3">SID005</string>
    <string name="row6col3">SID006</string>
    <string name="row7col3">SID007</string>
    <string name="row3col4">85</string>
    <string name="row4col4">80</string>
    <string name="row5col4">76</string>
    <string name="row6col4">59</string>
    <string name="row7col4">64</string>


    <!-- tables 02-->

    <string name="sstudentid">Student ID....</string>
    <string name="sgo">GO!</string>
    <string name="srow1col1" />
    <string name="srow2col1" />
    <string name="srow3col1" />
    <string name="srow4col1" />
    <string name="srow5col1" />
    <string name="srow6col4" />
    <string name="srow7col1">Total</string>
    <string name="srow8col1">AVG</string>
    <string name="srow1col2">ANO</string>
    <string name="srow2col2">01</string>
    <string name="srow3col2">02</string>
    <string name="srow4col2">03</string>
    <string name="srow5col2">04</string>
    <string name="srow6col2">05</string>
    <string name="srow7col2" />
    <string name="srow8col2" />
    <string name="srowcol3">Subject</string>
    <string name="srow2col3">MAD</string>
    <string name="srow3col3">MAD</string>
    <string name="srow4col3">MAD</string>
    <string name="srow5col3">MAD</string>
    <string name="srow6col3">MAD</string>
    <string name="srow7col3" />
    <string name="srow8col3" />
    <string name="srow1col4">Marks</string>
    <string name="srow2col4">79</string>
    <string name="srow3col4">86</string>
    <string name="srow4col4">67</string>
    <string name="srow5col4">53</string>
    <string name="ssrow6col4">95</string>
    <string name="srow7col4">380</string>
    <string name="srow8col4">76</string>


    <string name="app_name">panthiya</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>