<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="413dp"

        android:layout_height="75dp"
        android:background="@android:color/holo_purple"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:padding="12dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="92dp"
            android:contentDescription="@string/arrowback"
            android:foregroundTint="#0C090C"
            android:onClick="clickMenu"
            android:src="@drawable/menuicon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/panthikamare"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:contentDescription="@string/menuicon"
            android:src="@drawable/backarrow"
            android:tint="#FFFFFFFF"
            tools:ignore="UseAppTint" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="450dp"
        >

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/outline"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/sstudentid" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"

            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/outline"
                android:gravity="center"
                android:text="@string/sgo" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="1dp"
            >

            <TableRow

                android:background="#3B9C9C">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow1col1"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow1col2"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srowcol3"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow1col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>


            </TableRow>


            <TableRow

                android:background="#808080">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow2col1"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow2col2"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow2col3"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow2col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>


            </TableRow>

            <TableRow

                android:background="#808080">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow3col1"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow3col2"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow3col3"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow3col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>


            </TableRow>

            <TableRow

                android:background="#808080">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow4col1"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow4col2"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow4col3"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow4col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>


            </TableRow>

            <TableRow

                android:background="#808080">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow5col1"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow5col2"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow5col3"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow5col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>


            </TableRow>

            <TableRow

                android:background="#808080">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow6col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow6col2"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow6col3"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/ssrow6col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>


            </TableRow>

            <TableRow

                android:background="#736AFF">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow7col1"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow7col2"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow7col3"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow7col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>


            </TableRow>

            <TableRow

                android:background="#43BFC7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow8col1"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow8col2"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow8col3"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/srow8col4"
                    android:textColor="@color/white"
                    android:textSize="14sp">


                </TextView>


            </TableRow>


        </TableLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>