<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="413dp"

        android:layout_height="75dp"
        android:background="@android:color/holo_purple"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:padding="12dp">

        <ImageView
            android:layout_width="27dp"
            android:layout_height="92dp"
            android:contentDescription="@string/arrowback"
            android:foregroundTint="#0C090C"
            android:onClick="clickMenu"
            android:src="@drawable/menuicon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/panthikamare"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:contentDescription="@string/menuicon"
            android:src="@drawable/backarrow"
            android:tint="#FFFFFFFF"
            tools:ignore="UseAppTint" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/editassignmentno"
            android:textColor="@android:color/holo_purple"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="350dp"
            android:layout_height="25dp"
            android:background="@drawable/blackoutline"

            android:ems="10"
            android:gravity="start"
            android:hint="@string/editasignmentinput"
            android:inputType="textPersonName"

            android:textColor="#808080"
            android:textSize="15dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </Space>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editstudentid"
            android:textColor="@android:color/holo_purple"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="350dp"
            android:layout_height="25dp"
            android:background="@drawable/blackoutline"
            android:ems="10"


            android:hint="@string/editstudentidinput"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textSize="15dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </Space>

        <TextView
            android:id="@+id/textView11"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editfirstname"
            android:textColor="@android:color/holo_purple"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

        <EditText
            android:id="@+id/editTextTextPersonName5"

            android:layout_width="350dp"
            android:layout_height="25dp"
            android:background="@drawable/blackoutline"
            android:ems="10"


            android:hint="@string/editfirstnameinput"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textSize="15dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </Space>

        <TextView
            android:id="@+id/textView12"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editlastname"
            android:textColor="@android:color/holo_purple"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="350dp"
            android:layout_height="25dp"
            android:background="@drawable/blackoutline"
            android:ems="10"
            android:gravity="start"

            android:hint="@string/editlastnameinput"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textSize="15dp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </Space>

        <TextView
            android:id="@+id/textView13"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editmarks"
            android:textColor="@android:color/holo_purple"
            android:textSize="15dp"
            android:textStyle="bold" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

        <EditText
            android:id="@+id/editTextTextPersonName7"

            android:layout_width="350dp"
            android:layout_height="25dp"
            android:background="@drawable/blackoutline"
            android:ems="10"

            android:gravity="start"

            android:hint="@string/editmarksinput"
            android:inputType="textPersonName"
            android:padding="2dp"
            android:textSize="15dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </Space>

        <TextView
            android:id="@+id/textView14"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editcomment"
            android:textColor="@android:color/holo_purple"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp">

        </Space>

        <EditText
            android:id="@+id/editTextTextPersonName8"

            android:layout_width="350dp"
            android:layout_height="40dp"
            android:background="@drawable/blackoutline"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/editcommentinput"
            android:inputType="textPersonName"
            android:padding="2dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </Space>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updatebtn" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

